[package]
name = "rotvoxel"
version = "0.1.4"
authors = ["Brock Lubbers <[EMAIL_ADDRESS]>"]
license = "AGPL-3.0-or-later"
edition = "2021"
readme = "README.md"
repository = "https://github.com/blubbers122/rotvoxel"
documentation = "https://docs.rs/rotvoxel"
description = "Rotate voxel models using the rotsprite algorithm"
keywords = ["game", "voxel", "rotation"]
categories = ["rendering", "game-engines"]

[features]


[dependencies]
multiversion = "0.8.0"
thiserror = "2.0.0"
dot_vox = "5.2.0"


[dev-dependencies]
image = { version = "0.24.9", default-features = false, features = ["png"] }

[[example]]
name = "simple"
